Revision history for Perl distribution UserAgent-Any

0.05 - ??

 - Decode UTF-8 encoded JSON content (or any other charset) which is not done
   by default in many user agents.

0.04 - 2024-11-18

 - Improvement to the source distribution on GitHub.
 - Move the wrap_method function to a separate package.
 - Add the wrap_all_methods family of function.

0.03 - 2024-11-16

 - Also simplify the Response object class hierarchy.

0.02 - 2024-11-16

 - Improvement to the documentation.
 - Simplification of the class hierarchy.

0.01 - 2024-11-15

 - Initial release.