@@ -4,6 +4,7 @@ Revision history for Perl distribution UserAgent-Any
 
  - Decode UTF-8 encoded JSON content (or any other charset) which is not done
    by default in many user agents.
+ - Add a fake implementation to help test libraries depending on this one.
 
 0.04 - 2024-11-18
 
